# MusicMatrix

./: .gitignore  ARABIC_MAQAM_FIX.md  BLACK_KEY_FIX_COMPLETE.md  BUILD_WINDOWS.md  CHANGES.md  CMakeLists.txt  IMPLEMENTATION.md  KEYBOARD_FIX.md  KEYBOARD_IMPLEMENTATION.md  MIDI_TEST_INSTRUCTIONS.md  MainComponent_OLD.cpp  MyApp.jucer  QUICKSTART.md
.github/: copilot-instructions.md
Source/: BridgeWorkerMain.cpp  Main.cpp  MainComponent.h  MainComponent_Audio.cpp  MainComponent_Bridge.cpp  MainComponent_Core.cpp  MainComponent_Events.cpp  MainComponent_Keyboard.cpp  MainComponent_PluginLoading.cpp  MainComponent_Scanning.cpp  MainComponent_UI.cpp
Source/bridge/: AudioSharedMemory.h  IPCManager.cpp  IPCManager.h  PluginBridgeMaster.cpp  PluginBridgeMaster.h  PluginBridgeWorker.cpp  PluginBridgeWorker.h
Source/debug/: DebugLogger.h
Source/host/: BridgeManager.cpp  BridgeManager.h  PluginManager.cpp  PluginManager.h  UIController.cpp  UIController.h
Source/music/: OrientalScaleManager.cpp  OrientalScaleManager.h
Source/ui/: ChannelRackComponent.cpp  ChannelRackComponent.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  PianoRollComponent.cpp  PianoRollComponent.h  PluginSubWindowContainer.cpp  PluginSubWindowContainer.h  SequencerPanel.cpp  SequencerPanel.h
docs/: KEYBOARD_RANGE_UPDATE.md  REFACTORING_STATUS.md
melodies/: Salalem_El_Nashh.mid
prompts/: F1-prompt.md  chat_01.md
scripts/: build_host_x86.ps1  build_worker_x86.ps1  convert_to_midi.py
tests/: PluginHostingTests.cpp
